--- a/ContentBrowser/build.gradle
+++ b/ContentBrowser/build.gradle
@@ -47,22 +47,15 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.android.support:support-v4:23.1.1'
     compile 'com.android.support:recommendation:23.1.1'
-//    compile ("io.xpring:xpring4j:6.1.1"){
-//        exclude group: 'org.sl4j', module: 'sl4j-simple'
-//        exclude group: 'org.slf4j', module: 'slf4j-api'
-//    }
+    compile "org.ow2.asm:asm:7.1"
+    compile ("io.xpring:xpring4j:6.1.1"){
+        exclude group: 'asm', module: 'asm'
+
+    }
 
     debugCompile 'com.squareup.leakcanary:leakcanary-android:1.4-beta2'
     releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.4-beta2'
     testCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.4-beta2'
-
-    androidTestCompile('com.android.support.test:runner:0.4') {
-        exclude group: 'com.android.support', module: 'support-annotations'
-    }
-    androidTestCompile('com.android.support.test:rules:0.4') {
-        exclude group: 'com.android.support', module: 'support-annotations'
-    }
-    androidTestCompile 'junit:junit:4.12'
 
     compile project(':ModuleInterface')
     compile project(':AuthInterface')
