--- a/ContentBrowser/build.gradle
+++ b/ContentBrowser/build.gradle
@@ -50,8 +50,8 @@ dependencies {
     compile "org.ow2.asm:asm:7.1"
     compile ("io.xpring:xpring4j:6.1.1"){
         exclude group: 'asm', module: 'asm'
-
     }
+    compile 'com.android.volley:volley:1.1.1'
 
     debugCompile 'com.squareup.leakcanary:leakcanary-android:1.4-beta2'
     releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.4-beta2'
